chore: record Graal native compile validation