@@ -25,8 +25,13 @@
 - [x] S1: Create `build-system-todo.md` with findings, constraints, and plan.
 - [x] S2: Bump Java baseline/toolchain to 21 across active modules.
 - [x] S3: Run and fix full build/test under Java 21 baseline.
-- [ ] S4: Validate Graal native compile using `~/.sdkman/candidates/java/21.0.2-graalce`.
+- [x] S4: Validate Graal native compile using `~/.sdkman/candidates/java/21.0.2-graalce`.
 - [ ] S5: Upgrade baseline test dependency (JUnit 4.12 -> 4.13.2) and verify.
 - [ ] S6: Begin build-logic modernization pass 1 (safe incremental refactor, no behavior change).
 - [ ] S7: Centralize dependency repositories in `settings.gradle.kts` and remove duplicate project-level repo declarations.
 - [ ] S8: Replace root Kotlin plugin `buildscript classpath` usage with `plugins { ... apply false }`.
+
+## Notes from completed steps
+- S4 native compile command that worked:
+  - `JAVA_HOME=~/.sdkman/candidates/java/21.0.2-graalce GRAALVM_HOME=~/.sdkman/candidates/java/21.0.2-graalce ./gradlew :cake:lwjgl3:nativeCompile`
+- S4 emitted Graal native-image warnings from upstream metadata (experimental options and invalid `--add-exports` from `gdx-svmhelper`), but produced executable successfully.
